# paint-spill

./: .gitignore  CHANGELOG.md  LICENSE  README.md  paint-spill.cabal
bench/: Main.hs
bench/Bench/: Geom.hs
paint-spill/Graphics/: PaintSpill.hs
paint-spill/Graphics/PaintSpill/: Geom.hs  Util.hs
paint-spill/Graphics/PaintSpill/Geom/: Monotone.hs  Polygon.hs  Triangle.hs
test/: Main.hs
test/Test/: Geom.hs
test/Test/Geom/: Monotone.hs  Polygon.hs  Util.hs
