cabal-version:      2.4
name:               paint-spill
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:            MIT
author:             Wissle Lim
maintainer:         jongsome@gmail.com
category:           Graphics

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    hs-source-dirs:   paint-spill
    build-depends:
      , base ^>=4.14.3.0
      , mtl
    exposed-modules:  Graphics.PaintSpill
    default-language: Haskell2010

test-suite test-paint-spill
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    build-depends:
      , base ^>=4.14.3.0
      , tasty
      , tasty-hunit
      , paint-spill
    default-language: Haskell2010
