cabal-version:      2.4
name:               paint-spill
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:            MIT
author:             Wissle Lim
maintainer:         jongsome@gmail.com
category:           Graphics

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    hs-source-dirs:   paint-spill
    build-depends:
      , base
      , mtl
      , deepseq
      , linear
    exposed-modules:
        Graphics.PaintSpill
      , Graphics.PaintSpill.Geom
      , Graphics.PaintSpill.Geom.Monotone
      , Graphics.PaintSpill.Geom.Triangle
      , Graphics.PaintSpill.Geom.Polygon
      , Graphics.PaintSpill.Util

    default-language: Haskell2010

test-suite test-paint-spill
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    build-depends:
        base
      , tasty
      , tasty-hunit
      , paint-spill
      , linear
    exposed-modules:
        Test.Geom
        Test.Geom.Util
        Test.Geom.Monotone
        Test.Geom.Polygon
    default-language: Haskell2010

benchmark bench
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   bench
    build-depends:
        base
      , deepseq
      , gauge
      , linear
      , paint-spill
    exposed-modules:
        Bench.Geom
    default-language: Haskell2010
