cabal-version:      2.4
name:               paint-spill
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: An accelerated vector graphics, with vulkan.

-- A longer description of the package.
description: Please read the README.md for this.

author:             Wissle
maintainer:         jongsome@gmail.com

-- A copyright notice.
category: Graphics
extra-source-files: README.md

-- The paint-spill library
library
    hs-source-dirs:     paint-spill
    default-language:   Haskell2010
    build-depends:
        base
      , linear
      , vector
      , vulkan
    expoesed-modules:
        Graphics.PaintSpill 

